dvbsuboverlay: more TODO

--- a/gst/dvbsuboverlay/TODO
+++ b/gst/dvbsuboverlay/TODO
@@ -4,3 +4,7 @@ Check about GST_PAD_PARENT vs gst_pad_get_parent - do we need a reference - is t
 
 Ask about individual segment handling on separate sink pads. Is it possible that the separate NEWSEGMENT events on the text and video pad have different start and/or stop values, as to require some code complexity present?
 
+- parse incoming buffers into complete packets (first buffer of a packet should
+  have a timestamp set), and get rid of the gstmpegtsdemux hack
+
+- implement blitting/overlay for at least I420
