--- a/po/ru.po
+++ b/po/ru.po
@@ -3,13 +3,13 @@
 #
 # Артём Попов <artfwo@gmail.com>, 2009.
 # Pavel Maryanov <acid_jack@ukr.net>, 2009.
-# Yuri Kozlov <yuray@komyakino.ru>, 2010.
+# Yuri Kozlov <yuray@komyakino.ru>, 2010, 2011.
 msgid ""
 msgstr ""
-"Project-Id-Version: gst-plugins-base 0.10.29.2\n"
+"Project-Id-Version: gst-plugins-base 0.10.30.3\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2010-10-16 01:03+0100\n"
-"PO-Revision-Date: 2010-09-26 21:29+0400\n"
+"POT-Creation-Date: 2011-01-06 20:42+0000\n"
+"PO-Revision-Date: 2011-01-01 16:29+0300\n"
 "Last-Translator: Yuri Kozlov <yuray@komyakino.ru>\n"
 "Language-Team: Russian <gnu@mx.ru>\n"
 "Language: ru\n"
@@ -51,7 +51,7 @@ msgid "Playback"
 msgstr "Воспроизведение"
 
 msgid "Capture"
-msgstr "Захват"
+msgstr "Съёмка"
 
 msgid "Could not open device for playback in mono mode."
 msgstr "Не удалось открыть устройство для воспроизведения в режиме моно."
@@ -292,119 +292,121 @@ msgid "MusicBrainz TRM ID"
 msgstr "MusicBrainz TRM ID"
 
 msgid "capturing shutter speed"
-msgstr ""
+msgstr "выдержка при съёмке"
 
 msgid "Shutter speed used when capturing an image, in seconds"
-msgstr ""
+msgstr "Выдержка при съёмке изображения, в секундах"
 
 msgid "capturing focal ratio"
-msgstr ""
+msgstr "диафрагменное число при съёмке"
 
 msgid "Focal ratio (f-number) used when capturing the image"
-msgstr ""
+msgstr "Диафрагменное число (f) при съёмке изображения"
 
 msgid "capturing focal length"
-msgstr ""
+msgstr "фокусное расстояние при съёмке"
 
 msgid "Focal length of the lens used capturing the image, in mm"
-msgstr ""
+msgstr "Фокусное расстояние зеркала при съёмке изображения, в мм"
 
 msgid "capturing digital zoom ratio"
-msgstr ""
+msgstr "коэффициент цифрового трансфокатора при съёмке"
 
 msgid "Digital zoom ratio used when capturing an image"
-msgstr ""
+msgstr "Коэффициент цифрового трансфокатора при съёмке изображения"
 
 msgid "capturing iso speed"
-msgstr ""
+msgstr "чувствительность ISO при съёмке"
 
 msgid "The ISO speed used when capturing an image"
-msgstr ""
+msgstr "Чувствительность ISO при съёмке изображения"
 
 msgid "capturing exposure program"
-msgstr ""
+msgstr "программа экспозиции при съёмке"
 
 msgid "The exposure program used when capturing an image"
-msgstr ""
+msgstr "Программа экспозиции при съёмке изображения"
 
 msgid "capturing exposure mode"
-msgstr ""
+msgstr "режим экспозиции при съёмке"
 
 msgid "The exposure mode used when capturing an image"
-msgstr ""
+msgstr "Режим экспозиции при съёмке изображения"
 
 msgid "capturing scene capture type"
-msgstr ""
+msgstr "тип сцены при съёмке"
 
 msgid "The scene capture mode used when capturing an image"
-msgstr ""
+msgstr "Тип сцены при съёмке изображения"
 
 msgid "capturing gain adjustment"
-msgstr ""
+msgstr "регулировка усиления при съёмке"
 
 msgid "The overall gain adjustment applied on an image"
-msgstr ""
+msgstr "Итоговая настройка усиления, применяемая к изображению"
 
 msgid "capturing white balance"
-msgstr ""
+msgstr "баланс белого при съёмке"
 
 msgid "The white balance mode set when capturing an image"
-msgstr ""
+msgstr "Режим баланса белого при съёмке изображения"
 
 msgid "capturing contrast"
-msgstr ""
+msgstr "контрастность при съёмке"
 
 msgid "The direction of contrast processing applied when capturing an image"
-msgstr ""
+msgstr "Направление обработки контраста при съёмке изображения"
 
 msgid "capturing saturation"
-msgstr ""
+msgstr "насыщенность при съёмке"
 
 msgid "The direction of saturation processing applied when capturing an image"
-msgstr ""
+msgstr "Направление обработки насыщенности при съёмке изображения"
 
 msgid "capturing sharpness"
-msgstr ""
+msgstr "резкость при съёмке"
 
 msgid "The direction of sharpness processing applied when capturing an image"
-msgstr ""
+msgstr "Направление обработки резкости при съёмке изображения"
 
 msgid "capturing flash fired"
-msgstr ""
+msgstr "вспышка при съёмке"
 
 msgid "If the flash fired while capturing an image"
-msgstr ""
+msgstr "Сработала ли вспышка при съёмке изображения"
 
 msgid "capturing flash mode"
-msgstr ""
+msgstr "режим вспышки при съёмке"
 
 msgid "The selected flash mode while capturing an image"
-msgstr ""
+msgstr "Выбранный режим для вспышки при съёмке изображения"
 
 msgid "capturing metering mode"
-msgstr ""
+msgstr "режим замера при съёмке"
 
 msgid ""
 "The metering mode used while determining exposure for capturing an image"
 msgstr ""
+"Режим замера, использованный для определения экспозиции при съёмке "
+"изображения"
 
 msgid "capturing source"
-msgstr ""
+msgstr "источник для съёмки"
 
 msgid "The source or type of device used for the capture"
-msgstr ""
+msgstr "Источник или тип устройства, использованный для съёмки"
 
 msgid "image horizontal ppi"
-msgstr ""
+msgstr "изображение в ppi по горизонтали"
 
 msgid "Media (image/video) intended horizontal pixel density in ppi"
-msgstr ""
+msgstr "Горизонтальная плотность носителя (изображение/видео) в ppi"
 
 msgid "image vertical ppi"
-msgstr ""
+msgstr "изображение в ppi по вертикали"
 
 msgid "Media (image/video) intended vertical pixel density in ppi"
-msgstr ""
+msgstr "Вертикальная плотность носителя (изображение/видео) в ppi"
 
 msgid "This CD has no audio tracks"
 msgstr "На CD нет звуковых дорожек"
